src/components/commons/DropdownSelect.scss
@use '../../styles/' as styles;

.dropdown-select {
  position: absolute;
  margin: 0;
  padding: 0.5em;
  box-sizing: border-box;
  top: 50%;
  right: 0;
  max-height: 20em;
  width: 100%;
  background: #ffffff;
  overflow-y: auto;
  z-index: 1;

  color: styles.$text-color;
  filter: drop-shadow(0 0 0.75em styles.$border-color-neutral);
  font-weight: normal;

  -webkit-column-break-inside: avoid;
  page-break-inside: avoid;
  break-inside: avoid;
  backface-visibility: hidden;

  .label {
    padding: 0em 0.5em;
    font-weight: bold;
    font-style: italic;
  }

  hr {
    color: #ffffff00;
    border-top: 1px solid styles.$border-color-neutral;
    border-radius: 5px;
    border-bottom: 0px;
    margin-bottom: 0.125em;
  }

  ul {
    margin: 0;
    padding: 0;
  }

  li {
    display: flex;
    align-items: center;
    padding: 0.5em 0.5em;
    position: relative;
    line-height: 1.8em;

    &:hover {
      &:not(.disabled) {
        cursor: pointer;
        background: styles.$text-item-background-neutral;
      }
    }
  }

  .disabled {
    color: styles.$disabled-text-color;
  }

  .selected {
    &:before {
      font-family: 'Material Icons';
      font-size: 2em;
      content: 'check_box';
      padding-right: 0.5em;
    }
  }

  .unselected {
    &:before {
      font-family: 'Material Icons';
      font-size: 2em;
      content: 'check_box_outline_blank';
      padding-right: 0.5em;
    }
  }

  .radioSelected {
    background: styles.$text-item-background-neutral;
  }
}

